# fakePoW

./: .env  Cargo.toml  README.md  benchmarks.org
contracts/: Pow.sol
src/: main.rs  miner.rs  utils.rs
