[package]
name = "fake_pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-sol-types = "0.5.2"
dotenv = "0.15.0"
rand = "0.8.5"
revm = "3.5.0"
ruint = { version = "1.11.1", features = ["rand"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
